# zephyr_raspi4b

./: CMakeLists.txt  Cargo.toml  README.md  cbindgen.toml  prj.conf
bindings/: bindings.h  cbindings.h  extern.c  rustbindings.rs
boards/: rpi_4b.overlay
rpi_4b/: config.txt
src/: config.rs  display.rs  led.rs  lib.rs  main.c
