[package]
name = "zephyr_raspi4b"
version = "1.0.0"
authors = ["Nico Nachtigall <nico.nachtigall@googlemail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
cty = "*"